[package]
name = "account-aggregation"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.8.2"
async-trait = "0.1.80"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = "1.38.0"
serde = { version = "1.0.203", features = ["derive"] }
futures = "0.3.30"
log = "0.4.21"
derive_more = { version = "1.0.0-beta.6", features = ["from", "into", "display"] }
thiserror = "1.0.61"

# workspace dependencies
storage = { workspace = true }
uuid = "1.8.0"
