[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
hyper = "1.3.1"
tonic = "0.11.0"

# worspace dependencies
account-aggregation = { workspace = true }
storage  = { workspace = true }
routing-engine = { workspace = true }

[build-dependencies]
tonic-build = "0.11.0"
