[package]
name = "routing-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
linreg = "0.2.0"
num-bigint = "0.4.5"
reqwest = "0.12.4"
derive_more = "0.99.17"
tokio = { version = "1.38.0", features = ["macros"] }

[dev-dependencies]
dotenv = "0.15.0"
