[package]
name = "routing_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }
account_aggregation = { path = "../account_aggregation" }
storage = { path = "../storage" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
linreg = "0.2.0"
reqwest = "0.12.4"
derive_more = "0.99.17"
tokio = { version = "1.38.0", features = ["macros"] }
ruint = "1.12.3"
futures = "0.3.30"

[dev-dependencies]
dotenv = "0.15.0"
